Replace job assignedWorkers string with JobAssignment entity and lazy fetch with EntityGraph reads.
Co-authored-by: Cursor <cursoragent@cursor.com>